--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,11 @@ repositories {
 
 dependencies {
 
+//    // https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc
+//    implementation 'org.xerial:sqlite-jdbc:3.36.0.3'
+    // https://mvnrepository.com/artifact/com.h2database/h2
+    implementation 'com.h2database:h2:1.4.200'
+
     // https://github.com/Minecraftian14/MyLOGGER
     implementation 'com.github.Minecraftian14:MyLOGGER:v5.6'
     annotationProcessor 'com.github.Minecraftian14:MyLOGGER:v5.6'
